result
TestBoard.java:25: error: method toString in class Object cannot be applied to given types;
		return Game.toString(array);
		           ^
  required: no arguments
  found: String[][]
  reason: actual and formal argument lists differ in length
1 error
